<resources>
    <string name="app_name">My Second App</string>
    <string name="confirm">Confirm Now</string>
    <string name="Registration">Registration Form</string>
    <string name="club">Welcome to Adventure Learning Club!</string>
    <string name="FullName">Full Name: </string>
    <string name="gender">Gender </string>
    <string name="male">Male </string>
    <string name="female">Female</string>
    <string name="id">Stident ID</string>
    <string name="school">School</string>
    <string name="mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>
